Entities killed by damage in the flattens_entities.json tag will now have a unique flattening death animation instead of rotating sideways. Added systems for power-ups to intercept state transitions and include their own.