@@ -7,6 +7,7 @@ import fqf.qua_mario.mariostates.MarioState;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class Grounded extends MarioState {
 	public static final Grounded INSTANCE = new Grounded();
@@ -14,11 +15,11 @@ public class Grounded extends MarioState {
 	private Grounded() {
 		this.name = "Grounded";
 
-		preTickTransitions = new ArrayList<>(Arrays.asList(
-			CommonTransitions.FALL,
+		preTickTransitions = new ArrayList<>(List.of(
+				CommonTransitions.FALL,
 				() -> {
 					// Skid
-					if(MarioInputs.isPressed(MarioInputs.Key.BACKWARD)
+					if(MarioInputs.isHeld(MarioInputs.Key.BACKWARD)
 							&& MarioClient.forwardVel > MarioClient.getStat(CharaStat.SKID_THRESHOLD)) {
 						return Skid.INSTANCE;
 					}
@@ -26,8 +27,8 @@ public class Grounded extends MarioState {
 				}
 		));
 
-		postTickTransitions = new ArrayList<>(Arrays.asList(
-			CommonTransitions.JUMP
+		postTickTransitions = new ArrayList<>(List.of(
+				CommonTransitions.JUMP
 		));
 	}
 
@@ -44,16 +45,16 @@ public class Grounded extends MarioState {
 				if(MarioClient.forwardVel > MarioClient.getStatBuffer(CharaStat.RUN_SPEED)) {
 					// Overrun
 					MarioClient.groundAccel(
-							CharaStat.OVERRUN_ACCEL, CharaStat.RUN_SPEED, MarioClient.forwardInput,
-							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, MarioClient.rightwardInput,
+							CharaStat.OVERRUN_ACCEL, CharaStat.RUN_SPEED, 1.0,
+							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, 0.8,
 							CharaStat.RUN_REDIRECTION
 					);
 				}
 				else {
 					// Run Accel
 					MarioClient.groundAccel(
-							CharaStat.RUN_ACCEL, CharaStat.RUN_SPEED, MarioClient.forwardInput,
-							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, MarioClient.rightwardInput,
+							CharaStat.RUN_ACCEL, CharaStat.RUN_SPEED, 1.0,
+							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, 1.0,
 							CharaStat.RUN_REDIRECTION
 					);
 				}
@@ -62,24 +63,24 @@ public class Grounded extends MarioState {
 				if(MarioClient.forwardVel > MarioClient.getStatBuffer(CharaStat.WALK_SPEED)) {
 					// Overwalk
 					MarioClient.groundAccel(
-							CharaStat.OVERWALK_ACCEL, CharaStat.WALK_SPEED, MarioClient.forwardInput,
-							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, MarioClient.rightwardInput,
+							CharaStat.OVERWALK_ACCEL, CharaStat.WALK_SPEED, 1.0,
+							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, 1.0,
 							CharaStat.WALK_REDIRECTION
 					);
 				}
 				else if(MarioClient.forwardVel <= MarioClient.getStat(CharaStat.WALK_STANDSTILL_THRESHOLD)) {
 					// Walk accel from low velocity
 					MarioClient.groundAccel(
-							CharaStat.WALK_STANDSTILL_ACCEL, CharaStat.WALK_SPEED, MarioClient.forwardInput,
-							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, MarioClient.rightwardInput,
+							CharaStat.WALK_STANDSTILL_ACCEL, CharaStat.WALK_SPEED, 1.0,
+							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, 1.0,
 							CharaStat.WALK_REDIRECTION
 					);
 				}
 				else {
 					// Walk accel
 					MarioClient.groundAccel(
-							CharaStat.WALK_ACCEL, CharaStat.WALK_SPEED, MarioClient.forwardInput,
-							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, MarioClient.rightwardInput,
+							CharaStat.WALK_ACCEL, CharaStat.WALK_SPEED, 1.0,
+							CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, 1.0,
 							CharaStat.WALK_REDIRECTION
 					);
 				}
@@ -89,16 +90,16 @@ public class Grounded extends MarioState {
 			if(MarioClient.forwardVel < MarioClient.getStatBuffer(CharaStat.BACKPEDAL_SPEED)) {
 				// Over-backpedal
 				MarioClient.groundAccel(
-						CharaStat.OVERBACKPEDAL_ACCEL, CharaStat.BACKPEDAL_SPEED, MarioClient.forwardInput,
-						CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, MarioClient.rightwardInput,
+						CharaStat.OVERBACKPEDAL_ACCEL, CharaStat.BACKPEDAL_SPEED, 1.0,
+						CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, 1.0,
 						CharaStat.BACKPEDAL_REDIRECTION
 				);
 			}
 			else {
 				// Backpedal Accel
 				MarioClient.groundAccel(
-						CharaStat.BACKPEDAL_ACCEL, CharaStat.BACKPEDAL_SPEED, MarioClient.forwardInput,
-						CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, MarioClient.rightwardInput,
+						CharaStat.BACKPEDAL_ACCEL, CharaStat.BACKPEDAL_SPEED, 1.0,
+						CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, 1.0,
 						CharaStat.BACKPEDAL_REDIRECTION
 				);
 			}
@@ -106,8 +107,8 @@ public class Grounded extends MarioState {
 		else {
 			// Idle deaccel
 			MarioClient.groundAccel(
-					CharaStat.IDLE_DEACCEL, CharaStat.ZERO, MarioClient.forwardInput,
-					CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, MarioClient.rightwardInput,
+					CharaStat.IDLE_DEACCEL, CharaStat.ZERO, 1.0,
+					CharaStat.STRAFE_ACCEL, CharaStat.STRAFE_SPEED, 1.0,
 					CharaStat.ZERO
 			);
 		}
